[package]
name = "thread-count"
version = "0.2.0"
edition = "2021"
description = "Get the amount of threads in the current process"
keywords = ["thread", "count", "process", "number", "current"]
categories = ["os", "os::windows-apis", "os::unix-apis"]
repository = "https://github.com/AhoyISki/thread-count"
documentation = "https://docs.rs/thread-count"
authors = ["Tomio <mail@tom1o.space>", "AhoyISki <ahoyiski@gmail.com>"]
readme = "README.md"
license = "MIT"

[dependencies]

[target.'cfg(windows)'.dependencies]
field-offset = "0.3.4"

[target.'cfg(windows)'.dependencies.windows]
version = "0.38.0"
features = ["alloc", "Win32_System_Diagnostics_ToolHelp", "Win32_Foundation"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach2 = "0.4.1"
